--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 # TODO -> FIGURE OUT HOW TO OUTSOURCE ROUTING TO A DIFFERENT FILE
 # TODO -> MAKE BASICHTTP SERVE STATIC HTML
 # TODO -> TRY TO FOLLOW MVC MORE TIGHTLY
+# TODO -> ADD A SKELETON LOGO SVG
