Changed the description.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-# TODO -> FIGURE OUT HOW TO OUTSOURCE ROUTING TO A DIFFERENT FILE
 # TODO -> ADD A SKELETON LOGO SVG
+# TODO -> ADD A FILE WATCHER FOR LIVE RELOADING
 
 1) Application
     application/EDI-X12
